src/snapshots/din__lexer__test_valid__arithmetic_addition.snap
---
source: src/lexer.rs
expression: output
---
- lexeme: int
  typ: KeywordTypeInt
- lexeme: main
  typ: KeywordMain
- lexeme: (
  typ: PuncLeftParen
- lexeme: )
  typ: PuncRightParen
- lexeme: "{"
  typ: PuncLeftBrace
- lexeme: return
  typ: StatementReturn
- lexeme: "9"
  typ: LiteralInt
- lexeme: +
  typ: Plus
- lexeme: "10"
  typ: LiteralInt
- lexeme: ;
  typ: PuncSemiColon
- lexeme: "}"
  typ: PuncRightBrace

